2004-07-26  David Malcolm  <dmalcolm@redhat.com>

	* Makefile.am, cong-spell.h, cong-spell.c: 

	Added files to handle spell-checking support

2004-07-23  Jeff Martin  <jeff@custommonkey.org>

	* cong-util.c

	Fixed typo, xmls changed to xmlns in cong_element_description_make_user_name

2004-07-22  Geert Stappers  <stappers@stappers.nl>

	* plugin-docbook.c:
	
	Give the initial article a section, so the next sections
	can be inserted. This is for bugzilla bugreport #148117.

2004-07-18  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-util.c: 

	Make all spell-checking return without errors for now

	* cong-document.c (cong_document_get_language_for_node): 

	Implemented this function, with support for the standard xml:lang, and for DocBook's lang attribute

	* cong-editor-widget3.c, cong-location.c, cong-location.h, cursor.c:

	Rewrite of CongLocation methods to work better with the new multiple dispspec model: everything uses a CongDocument rather than a CongDispspec now

	* cong-dispspec.c, cong-dispspec.h: 

	Added support for <typical-prefix> element

2004-07-16  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-file-properties.c:

	Use dispspec of root element rather than default dispspec when
	displaying type information in File->Properties dialog.

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h, cong-dispspec.c, cong-dispspec.h:
	Namespace URI is now a per-CongDispspec property, rather than
	per-CongDispspecElement; it is an attribute of the <element-list>
	element, rather than the <element> element.

2004-07-15  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element.c, cong-dispspec-element.h, cong-dispspec-registry.c, cong-dispspec-registry.h, cong-dispspec.c, cong-document.c, cong-document.h, cong-edit-find-and-replace.c, cong-file-open.c, cong-file-properties.c, cong-util.c, plugin-fo.c, plugin-relaxng.c:

	CongDispspecElements now know which CongDispspec they belong to;